[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Tevinthuku <tevinthuku@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path="src/lib.rs"


[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "=4.0.0-beta.8"
actix-http = "=3.0.0-beta.8"
serde = { version = "1", features = ["derive"]}
config = "0.11.0"
chrono = "0.4.15"
uuid = {version = "0.8.2", features = ["v4"] }
tracing = { version = "0.1", features = ["log"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.5"
tracing-log = "0.1.2"
tracing-actix-web = "0.4.0-beta.8"
serde-aux = "2.2.0"
unicode-segmentation = "1.8.0"
validator = "0.14.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.5.5"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
actix-rt = "2"
tokio = { version = "1", features = ["rt", "macros"] }
once_cell = "1.8.0"
claim = "0.5.0"
# We are not using fake >= 2.4 because it relies on rand 0.8
# which has been recently released and it is not yet used by
# quickcheck (solved in its upcoming 1.0 release!)
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.5"
serde_json = "1"
